# truetype-tracer

./: CMakeLists.txt  LICENSE.txt  README.asciidoc  README.md  README.txt  dxf_writer.hpp  extents.hpp  ngc_writer.hpp  p.hpp  segment_writer.hpp  test_1.py  test_2.py  ttt.cpp  ttt.hpp  ttt2ngc.py  ttt_py.cpp  writer.hpp
.github/workflows/: cmake-build.yml
cpp/minimal/: main.cpp
cpp/seg_writer/: CMakeLists.txt  main.cpp
py/: test_1.py  test_2.py  test_3_textwriter.py
src/: CMakeLists.txt  dxf_writer.hpp  extents.hpp  ngc_writer.hpp  package_details.cmake  segment_writer.hpp  segment_writer_py.hpp  ttt.cpp  ttt.hpp  ttt_font.hpp  ttt_py.cpp  version_string.cmake  writer.hpp
src/deb/: DebSourcePPA.cmake  debian_package_description.txt  package_details.cmake
src/debian/: debian_copyright.txt
